Add launch script contents to README
run.sh and run.bat are excluded from the repo via .gitignore,
so their full contents are now documented in the README for users
to recreate locally after cloning.